--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 Моя жизнь полна радости!!!.</br>
                 Каждый день моя хозяйка кормин меня и играет со мной.</br>
             </p>
-            <img class="img"src="1.png" width="220px">
+            <img class="img"src="i.png" width="220px">
         </div>
         <img class="img_2" src="i.png" width="300px">
 
