--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 Моя жизнь полна радости!!!.</br>
                 Каждый день моя хозяйка кормин меня и играет со мной.</br>
             </p>
-            <img class="img"src="i.png" width="220px">
+            <img class="img"src="i.jpg" width="220px">
         </div>
-        <img class="img_2" src="i.png" width="300px">
+        <img class="img_2" src="i.jpg" width="300px">
 
         <div class="basement">
             <p class="down">
