--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 Моя жизнь полна радости!!!.</br>
                 Каждый день моя хозяйка кормин меня и играет со мной.</br>
         </div>
-        <img class="img_2" src="2.jpg" width="300px">
+        <img class="img" src="2.jpg" width="300px">
 
         <div class="basement">
             <p class="down">
